--- a/festa/index.html
+++ b/festa/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>site do renanzito plays</title>
-    <link rel="stylesheet" href="style.css">
+    <title>renantrash-Festa</title>
     <script src="app.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Oi, eu sou o Renan. &#x1F44D
-    <br>
-    <a href="site/">Site ruim (teste)</a>
-    <br>
-    <a href="festa/">Festa</a>
+    YAY! FESTA!
 </body>
 </html>
