GIFs adicionados à festa

--- a/festa/index.html
+++ b/festa/index.html
@@ -10,5 +10,14 @@
 </head>
 <body>
     YAY! FESTA!
+    <div class="gifs">
+        <img src="assets/blob_dancando.gif"/>
+        <img src="assets/dancano.gif"/>
+        <img src="assets/kirby-dancing.gif"/>
+        <img src="assets/kirby-headphones.gif"/>
+        <img src="assets/parrot_dancano.gif"/>
+        <img src="assets/sans.gif"/>
+    </div>
+    
 </body>
 </html>
