--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <script src="app.js"></script>
 </head>
 <body>
+    <img src="assets/text.gif" alt="renan_trash" sizes=50%, 50%>
+    <br>
     Oi, eu sou o Renan. &#x1F44D
     <br>
-    <a href="site/">Site ruim (teste)</a>
+    <a href="site/">&#x1F5D1 Site ruim (teste)</a>
     <br>
-    <a href="festa/">Festa</a>
+    <a href="festa/">&#x1F389 Festa</a>
 </body>
 </html>
