Correção do gif da home page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <img src="assets/text.gif" alt="renan_trash" sizes=50%, 50%>
+    <img src="assets/text.gif" alt="renan_trash"/>
     <br>
     Oi, eu sou o Renan. &#x1F44D
     <br>
